--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,19 +8,14 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "qdrant-client>=1.7.0",
     "sentence-transformers>=2.3.0",
-    "vllm>=0.2.7",
     "python-multipart>=0.0.6",
-    "PyPDF2>=3.0.1",
+    "pypdf2>=3.0.1",
     "python-docx>=1.1.0",
     "beautifulsoup4>=4.12.2",
     "lxml>=5.0.0",
-    "python-jose[cryptography]>=3.3.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "httpx>=0.26.0",
     "aiofiles>=23.2.1",
+    "vllm>=0.11.0",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
