feat: Add model download protection, fix model switching, add XML/Graph RAG
Model Management:
- Enhanced check_model_downloaded() to verify .safetensors files exist
- Added check_model_download_in_progress() to detect incomplete downloads
- Added 'downloading' status to ModelInfo schema
- Fixed vLLM status endpoint to include API key auth
- Fixed LLM service to dynamically get active model from vLLM
- Prevent model selection if download is in progress
- Sorted models alphabetically in dropdown

Frontend:
- Show 'Downloading...' badge with pulse animation
- Disable selection for downloading models
- Auto-refresh model list every 5s while dropdown open
- Better error messages when model switch fails

XML & Graph RAG:
- XML processing for IT-Grundschutz Kompendium (DocBook 5.0)
- Neo4j graph service for knowledge graph
- Async job processor with SQLite persistence
- New XML-related schemas and API endpoints

Bug fixes:
- Fixed 21 TypeScript errors
- Fixed job.id attribute errors
- Fixed Neo4j async event loop issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,23 @@ services:
     depends_on:
       - qdrant
       - vllm
+      - neo4j
+    restart: unless-stopped
+
+  neo4j:
+    image: neo4j:5-community
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    volumes:
+      - ./neo4j_data:/data
+      - ./neo4j_plugins:/plugins
+    environment:
+      - NEO4J_AUTH=neo4j/neo4jpassword
+      - NEO4J_PLUGINS=["apoc"]
+      - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_apoc_import_file_use__neo4j__config=true
     restart: unless-stopped
 
   frontend:
@@ -62,3 +79,5 @@ volumes:
   qdrant_storage:
   data:
   chat_history:
+  neo4j_data:
+  neo4j_plugins:
