--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,4 +18,7 @@ dependencies = [
     "httpx>=0.26.0",
     "aiofiles>=23.2.1",
     "vllm>=0.11.0",
+    "neo4j>=5.14.0",
+    "defusedxml>=0.7.1",
+    "aiosqlite>=0.19.0",
 ]
