feat: Migrate to Ollama backend with Docker and GHCR support
## Architecture Changes
- Replace vLLM with Ollama as the LLM inference backend
- Remove Neo4j graph database (no longer needed)
- Remove XML processing functionality
- Simplify to Ollama + Qdrant + FastAPI + React stack

## Docker & CI/CD
- Add GitHub Actions workflow for automatic Docker builds
- Publish images to ghcr.io/aihpi/workshop-ragv2-backend
- Publish images to ghcr.io/aihpi/workshop-ragv2-frontend
- Add .dockerignore for optimized builds
- Update docker-compose.yml with Ollama host connection
- Add profile support for optional Qdrant container

## Backend Changes
- Update LLMService to use Ollama API (port 11434)
- Fix model switching persistence (always read from file)
- Add model management endpoints (list, pull, delete, set-active)
- Remove vLLM, Neo4j, and XML dependencies from pyproject.toml
- Delete unused services: xml_processor, graph_service, async_processor
- Update config.py with Ollama settings

## Frontend Changes
- Rewrite ModelSelector for Ollama model management
- Add model download progress with streaming
- Remove XML and Graph-related code from api.ts
- Update Settings.tsx layout (full-width, centered content)
- Filter POPULAR_MODELS to Qwen models only

## Documentation
- Update README with Ollama prerequisites
- Add Docker quick start instructions
- Update troubleshooting section for Ollama
- Add Docker Images section with GHCR pull commands

## Scripts
- Add start_ollama.sh for Ollama server management
- Update setup scripts for Ollama workflow
- Migrate pip to uv package manager

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "rag-backend"
 version = "0.1.0"
-description = "RAG Backend with FastAPI, Qdrant, and vLLM"
+description = "RAG Backend with FastAPI, Qdrant, and Ollama"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.109.0",
@@ -17,8 +17,5 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "httpx>=0.26.0",
     "aiofiles>=23.2.1",
-    "vllm>=0.11.0",
-    "neo4j>=5.14.0",
     "defusedxml>=0.7.1",
-    "aiosqlite>=0.19.0",
 ]
