--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,15 +16,14 @@ QDRANT_COLLECTION=documents
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 EMBEDDING_DIM=384
 
-# LLM Settings
-VLLM_HOST=localhost
-VLLM_PORT=8001
-LLM_MODEL=meta-llama/Llama-3.2-3B-Instruct
+# Ollama Settings
+OLLAMA_HOST=localhost
+OLLAMA_PORT=11434
+OLLAMA_MODEL=qwen2.5:7b-instruct
 LLM_MAX_TOKENS=512
 LLM_TEMPERATURE=0.7
 LLM_TOP_P=0.9
 LLM_TOP_K=40
-LLM_CONTEXT_WINDOW=8192
 
 # Document Processing Settings
 CHUNK_SIZE=512
