feat: Add multi-variant Docker image support
- Build and push from feature_ollama and feature_api branches
- Create semantic tags: :ollama and :api for respective branches
- main branch continues to publish :latest tag

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - feature_ollama
+      - feature_api
     tags:
       - 'v*'
   pull_request:
@@ -48,6 +50,8 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=ollama,enable=${{ github.ref == 'refs/heads/feature_ollama' }}
+            type=raw,value=api,enable=${{ github.ref == 'refs/heads/feature_api' }}
 
       - name: Extract metadata for frontend
         id: meta-frontend
@@ -60,6 +64,8 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=ollama,enable=${{ github.ref == 'refs/heads/feature_ollama' }}
+            type=raw,value=api,enable=${{ github.ref == 'refs/heads/feature_api' }}
 
       - name: Build and push backend image
         uses: docker/build-push-action@v5
