fix: remove .env requirement from frontend Docker build

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
 # Frontend Dockerfile
-FROM node:18-alpine as build
+FROM node:18-alpine AS build
 
 WORKDIR /app
 
@@ -8,8 +8,12 @@ COPY frontend/package*.json ./
 COPY frontend/tsconfig*.json ./
 COPY frontend/vite.config.ts ./
 COPY frontend/index.html ./
-COPY frontend/.env ./
 COPY frontend/src ./src
+COPY frontend/public ./public
+
+# Note: .env is NOT copied for Docker builds.
+# The frontend uses relative URLs (/api) and nginx proxies to the backend.
+# For local development, copy .env.example to .env
 
 # Install dependencies and build
 RUN npm install && npm run build
