feat: Add provider abstraction for LLM and embedding services
- Add configuration-based switching between providers:
  - LLM_PROVIDER: 'ollama' (default) or 'openai'
  - EMBEDDING_PROVIDER: 'local' (default) or 'openai'

- Abstract LLM service with BaseLLMService ABC:
  - OllamaLLMService: existing Ollama implementation
  - OpenAILLMService: new OpenAI-compatible API implementation

- Abstract embedding service with BaseEmbeddingService ABC:
  - LocalEmbeddingService: existing SentenceTransformers
  - OpenAIEmbeddingService: custom API using chat completions

- Add startup dimension compatibility check:
  - Detects Qdrant collection vs embedding dimension mismatch
  - Automatically recreates collection with correct dimensions

- Update all API routes to use factory functions
- Add openai package dependency
- Update docker-compose.yml with new environment variables
- Update .env.example with comprehensive documentation
- Update README.md with provider configuration guide

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,7 +12,22 @@ QDRANT_HOST=localhost
 QDRANT_PORT=6333
 QDRANT_COLLECTION=documents
 
-# Embedding Settings
+# =============================================================================
+# PROVIDER SELECTION
+# =============================================================================
+# Choose your LLM and embedding providers:
+#   LLM_PROVIDER: "ollama" (local) or "openai" (API-based)
+#   EMBEDDING_PROVIDER: "local" (SentenceTransformers) or "openai" (API-based)
+# =============================================================================
+LLM_PROVIDER=ollama
+EMBEDDING_PROVIDER=local
+
+# =============================================================================
+# LOCAL PROVIDERS (Ollama + SentenceTransformers)
+# =============================================================================
+# These settings are used when LLM_PROVIDER=ollama and EMBEDDING_PROVIDER=local
+
+# Embedding Settings (local SentenceTransformers)
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 EMBEDDING_DIM=384
 
@@ -20,6 +35,33 @@ EMBEDDING_DIM=384
 OLLAMA_HOST=localhost
 OLLAMA_PORT=11434
 OLLAMA_MODEL=qwen2.5:7b-instruct
+
+# =============================================================================
+# OPENAI-COMPATIBLE API PROVIDERS
+# =============================================================================
+# These settings are used when LLM_PROVIDER=openai or EMBEDDING_PROVIDER=openai
+# 
+# To use the OpenAI-compatible API:
+# 1. Copy this file to .env
+# 2. Set your API key (NEVER commit your actual key to version control!)
+# 3. Set LLM_PROVIDER=openai and/or EMBEDDING_PROVIDER=openai
+# =============================================================================
+
+# Your API key (required for OpenAI provider)
+# Get your key from your API provider and set it here
+OPENAI_API_KEY=your_api_key_here
+
+# API base URL
+OPENAI_BASE_URL=http://10.127.129.0:4000
+
+# Model names
+OPENAI_LLM_MODEL=gpt-oss-120b
+OPENAI_EMBEDDING_MODEL=octen-embedding-8b
+OPENAI_EMBEDDING_DIM=4096
+
+# =============================================================================
+# COMMON LLM SETTINGS (apply to both providers)
+# =============================================================================
 LLM_MAX_TOKENS=512
 LLM_TEMPERATURE=0.7
 LLM_TOP_P=0.9
